$Id: ChangeLog,v 1.113 2004/09/10 10:38:00 haraldkipp Exp $

2004-09-10  Harald Kipp  <harald.kipp@egnite.de>

	* eboot/ether.c: Added minimal "EEPROM emulation" to support
	Ethernut 1.3 Rev-G boards. To squeeze it again in 4kByte,
	the broadcast, gateway and dns had been removed.

	* Makedefs.avr-icc, Makerules.avr-icc, app/Makedefs.avr-icc, 
	app/Makerules.avr-icc: Replaces .icc files.

	* app/Makedefs.avr-gcc, app/Makerules.avr-gcc: Replaces 
	.gcc files.

	* app/rs232d/rs232d.c: Removed old header files.

	* app/threads/Makefile: Undefined references solved by
	second pass for libnutos.

	* app/threads/threads.c: Replaced devUart0 by devUsartAvr0.

	* app/uart/Makefile, app/uart/uart.c: Floating point
	configuration broken. Temporarly removed.

	* dev/nicrtl.c: ICCAVR compile problems fixed.


2004-09-08  Harald Kipp  <harald.kipp@egnite.de>

	* os/version.c: Although this is no final release, there
	is a lot of new hardware waiting for Nut/OS support. So
	I marked this with version 3.9.1 before creating the
	long awaited 4.0 branch.

	* Makedefs.arm-gcc, Makerules.arm-gcc: Reduced to what we 
	really need.

	* Makedefs.avr-gcc: Remove directory part from listing
	files to keep the source directory clean.

	* nut/Makerules.avr-gcc: Assembler rule added.

	* nut/app/Makedefs.avr-dude, nut/app/Makeburn.avr-uisp-stk500:
	Programmer configuration files added. Frankly, I'm not happy
	with this solution. Any better ideas for programmer
	configuration?

	* app/isp2/Makefile: *nix requires dot-slash for local
	include directory.

	* app/simple/Makefile, app/threads/Makefile: Add configurable 
	library list.

	* app/threads/threads.cpp: Added support for EB40A. This is
	our first example running on that board.

	* app/timers/timers.cpp: Added support for EB40A, but still
	not working. :-(

	* c/stdlib/*, c/string/*: Minimal standard C library added,
	using some BSD code. There are a lot of libraries available, 
	but many of them are not really OS independent.
