@@ -32,6 +32,9 @@
 # For additional information see http://www.ethernut.de/
 #
 # $Log$
+# Revision 1.4  2004/09/10 17:18:25  haraldkipp
+# Building inside source tree is working again
+#
 # Revision 1.3  2004/09/08 10:17:44  haraldkipp
 # Listing in local dir
 #
@@ -48,6 +51,7 @@ DEFS  = $(HWDEF)
 INCPRE = -I
 INCDIR = $(top_srcdir)/include
 
+ARCH   = avr
 TRGT   = avr-
 CC     = $(TRGT)gcc
 AR     = $(TRGT)ar
