@@ -32,6 +32,9 @@
 # For additional information see http://www.ethernut.de/
 #
 # $Log: Makefile,v $
+# Revision 1.16  2004/09/10 17:18:29  haraldkipp
+# Building inside source tree is working again
+#
 # Revision 1.15  2004/08/02 10:04:26  olereinhardt
 # Added adc.c to Makefile
 #
@@ -129,7 +132,10 @@
 PROJ = libnutdev
 
 top_srcdir = ..
+top_blddir = ..
 
+LIBDIR = $(top_blddir)/lib
+include $(top_srcdir)/UserConf.mk
 include $(top_srcdir)/Makedefs
 
 ifeq ($(ARCH), avr)
@@ -137,8 +143,8 @@ ifeq ($(ARCH), avr)
 SRCS =  irqstack.c \
 	uartavr.c uart0.c uart1.c usart.c usart0avr.c usart1avr.c uartspi.c uarts.c ahdlc0.c ahdlc1.c ahdlcavr.c \
 	nicrtl.c lanc111.c eth0rtl.c cs8900.c eth0cs.c netbuf.c \
-	vs1001k.c ir.c irsony.c spidigio.c spiflash.c \
-	ide.c twif.c hd44780.c hd44780_bus.c term.c debug0.c debug1.c \
+	vs1001k.c ir.c irsony.c spiflash.c \
+	ide.c twif.c hd44780.c term.c debug0.c debug1.c \
 	ppp.c chat.c pcmcia.c wlan.c wlandrv.c \
 	ivect01.c ivect02.c ivect03.c ivect04.c ivect05.c ivect06.c \
 	ivect07.c ivect08.c ivect09.c ivect10.c ivect11.c ivect12.c \
